--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Package app with Gradle
-        run: ./gradlew jpackage -Pversion="${{ github.ref_name }}"
+        run: ./gradlew jpackage -Pversion="${{ github.ref_name }}" -PappLoggingStdout=false
       - name: Upload Asset
         shell: bash
         run: |
