--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ ext {
     println "CLASSIFIER:   ${platform}"
 
     set 'runDir', "$projectDir/.run"
+
+    /* Dependency versions */
+    set 'logbackVersion', "1.5.18"
+    set 'guiceVersion', '7.0.0'
 }
 
 processResources {
@@ -99,11 +103,14 @@ dependencies {
             "$projectDir/lib/${System.mapLibraryName("MathVES")}"
     )
 
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    implementation("ch.qos.logback:logback-classic:$logbackVersion")
+    implementation project(":app-logback-appender")
+    implementation 'org.codehaus.janino:janino:3.1.12'
+//    implementation "org.slf4j:slf4j-jdk14:${slf4jVersion}"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
-//    implementation "org.slf4j:slf4j-jdk14:${slf4jVersion}"
-    implementation 'ch.qos.logback:logback-classic:1.5.18'
 
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
@@ -113,7 +120,8 @@ dependencies {
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    implementation group: 'com.google.inject', name: 'guice', version: '7.0.0'
+
+    implementation group: 'com.google.inject', name: 'guice', version: guiceVersion
     implementation group: 'org.tinfour', name: 'TinfourCore', version: '2.1.8'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
     implementation 'org.apache.commons:commons-collections4:4.4'
