Remove try/catch in drawing logic. Improve slf4j helper function. Some rename.

--- a/src/main/resources/ui.properties
+++ b/src/main/resources/ui.properties
@@ -47,10 +47,12 @@ noFileTitle=Welcome to GEM
 noFileText=You can open SONET-compatible file for VES interpretation
 openEXPFile=Open EXP file
 useSystemMenu=Use system menu
-unableToDrawChart=Unable to draw chart
+# Errors
 noLib=Library not found
 fileError=An error occurred while opening the file
 error=Error
+saveAndRestart=Save data and restart application
+
 compatibilityMode=Compatibility Mode
 EXPSTTMismatch=STT and EXP files lines counts are unequal
 minimalDataWillBeDisplayed=Minimal possible amount of data will be displayed
