Data Model refactor. Add Mutable/ReadOnly Interfaces. - Improve AddExperimentalData screen with validation. - Improve Experimental Data and Model Tables with localized validation messages. - Fix CanvasRenderPolygonChart.kt - Add ObservablePicket, ObservableSection models

--- a/src/main/resources/ui.properties
+++ b/src/main/resources/ui.properties
@@ -10,6 +10,7 @@ help=Help
 import=Import
 close=Close
 newWindow=New section (in new window)
+addSignal=Добавить измерение
 # Панели
 pseudoSection=Pseudo-section
 geoSection=Section
@@ -52,6 +53,15 @@ noLib=Library not found
 fileError=An error occurred while opening the file
 error=Error
 saveAndRestart=Save data and restart application
+invalidInput=Invalid input
+invalid.exp.ab2=Разнос AB/2 [метр] должен быть больше нуля
+invalid.exp.mn2=Разнос MN/2 [метр] должен быть больше нуля
+invalid.exp.amperage=Сила тока I [миллиампер] должна быть больше нуля
+invalid.exp.voltage=Напряжение U [милливольт] должно быть больше нуля
+invalid.exp.resistivityApparent=Кажущееся сопротивление ρₐ [Ом‧метр] должно быть больше нуля
+invalid.exp.errorResistivityApparent=Погрешность кажущегося сопротивления [процент] должна быть в диапазоне 1-100
+invalid.model.resistivity=Сопротивление ρ [Ом‧метр] должно быть больше нуля
+invalid.model.power=Мощность H [метр] должна быть больше нуля
 
 compatibilityMode=Compatibility Mode
 EXPSTTMismatch=STT and EXP files lines counts are unequal
