Refactor: Replace all "resistance" with "resistivity"

--- a/src/main/resources/ui.properties
+++ b/src/main/resources/ui.properties
@@ -26,13 +26,13 @@ experimentalTable=Experimental Table
 # Таблица экспериментальных данных
 ab2=AB/2 (m)
 mn2=MN/2 (m)
-resistanceApparentFull=Apparent resistance ρₐ (Ω‧m)
+resistivityApparentFull=Apparent resistivity ρₐ (Ω‧m)
 amperage=Amperage (mA)
 voltage=Voltage (mV)
-errorResistanceApparent=Error ρₐ (%)
+errorResistivityApparent=Error ρₐ (%)
 # Таблица экспериментальных данных
 power=Power (m)
-resistance=Resistance ρ (Ω‧m)
+resistivity=Resistivity ρ (Ω‧m)
 modelPolarization=Polarization (%)
 view=View
 legend=Chart legends
@@ -94,6 +94,9 @@ kFull=Геометрический коэффициент
 authors=Авторы
 normalization=Нормализация
 additive=δₐ (add) [(Ω‧m)⁻¹]
+errorFunction.usingTrustIntervals=По доверительным интервалам
+errorFunction.usingVariance=По правилу трех сигма (по дисперсии)
+
 # Anisotropy
 a.point=Установка с анизотропией
 openProject=Открыть проект
